tests/ui/allocator/function-allocator.stderr
error: allocators must be statics
  --> $DIR/function-allocator.rs:2:1
   |
LL | fn foo() {}
   | ^^^^^^^^^^^

error: aborting due to previous error

