tests/ui/allocator/function-allocator.rs
#[global_allocator]
fn foo() {} //~ ERROR: allocators must be statics

fn main() {}
